[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letorch"
version = "0.1.0"
description = "PyTorch-native Representation Similarity Analysis (RSA) with GPU support"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
  { name = "Nishit Aggarwal" },
]
keywords = ["neuroscience", "representation", "similarity", "RSA", "pytorch", "deep learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "torch>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "numpy",
  "scipy",   # only used in tests to cross-validate results
]

[project.urls]
Homepage = "https://github.com/nishit/letorch"
Issues   = "https://github.com/nishit/letorch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/letorch"]
